# vpaas

./: .gitignore  docker-compose.yml
common/: Cargo.toml
common/src/: dimensions.rs  job.rs  lib.rs  progress.rs
frontend/: package-lock.json
frontend/public/: index.html  manifest.json
frontend/src/: index.js  menu.js
frontend/src/components/: Heading.js
frontend/src/routes/: mainRoute.js
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
transcoder-worker/: Cargo.toml
transcoder-worker/src/: dimensions.rs  job.rs  main.rs  progress.rs
transcoder-worker/src/executor/: ffmpeg.rs  mod.rs
