[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
serde = "1"
serde_json = "1"
axum = { version = "0.6", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4"] }
async-redis-session = "0.2.2"
